@@ -3,13 +3,15 @@ Revision history for libev, a high-performance and full-featured event loop.
 TODO: move some other examples to common idioms? combining watchers,
 thread usage, coroutine switch?
 
-TODO: /dev/null epoll breakage, maybe catch EPERM?
 TODO: frankenpoll
 4.03
 	- support files, /dev/zero etc. the same way as select in the epoll
           backend, by generating events on our own.
 	- define EV_READ/EV_WRITE as macros in event.h, as some programs use
           #ifdef to test for them.
+        - new (experimental) function: ev_feed_signal.
+        - new (to become default) EVFLAG_NOSIGMASK flag.
+        - new EVBACKEND_MASK symbol.
 
 4.01 Fri Nov  5 21:51:29 CET 2010
         - automake fucked it up, apparently, --add-missing -f is not quite enough
